unpackaged/objects/copado__Compliance_Finding__c.object
<CustomObject>
	<description>This object stores the individual findings of a Compliance Scan.  It is a junction object between the Compliance Scan and the Compliance Rule for which the findings have been found.</description>
	<fields>
		<fullName>copado__Compliance_Rule__c</fullName>
		<label>Compliance Rule</label>
		<referenceTo>copado__Compliance_Rule__c</referenceTo>
		<relationshipLabel>Compliance Findings</relationshipLabel>
		<relationshipName>Compliance_Incidences</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
		<writeRequiresMasterRead>true</writeRequiresMasterRead>
	</fields>
	<fields>
		<fullName>copado__Compliance_Scan_Result__c</fullName>
		<label>Compliance Scan Result</label>
		<referenceTo>copado__Compliance_Scan_Result__c</referenceTo>
		<relationshipLabel>Compliance Findings</relationshipLabel>
		<relationshipName>Compliance_Findings</relationshipName>
		<relationshipOrder>1</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copado__Rule_Error_Message__c</fullName>
		<description>This field is populated with error message from its Compliance Rule Error Message</description>
		<label>Rule Error Message</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Severity__c</fullName>
		<formula>TEXT(copado__Compliance_Rule__r.copado__Severity__c)</formula>
		<inlineHelpText>The severity of the Rule that has been violated</inlineHelpText>
		<label>Rule Severity</label>
		<type>Text</type>
	</fields>
	<label>Compliance Finding</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Compliance_Rule__c</columns>
		<columns>copado__Compliance_Scan_Result__c</columns>
		<columns>copado__Severity__c</columns>
		<columns>CREATED_DATE</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>CF-{000000000}</displayFormat>
		<label>Compliance Finding Reference</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Compliance Findings</pluralLabel>
	<recordTypes>
		<fullName>copado__Copado</fullName>
		<active>true</active>
		<description>This record type is used for scan findings produced by Copado.</description>
		<label>Copado</label>
	</recordTypes>
	<recordTypes>
		<fullName>copado__Other</fullName>
		<active>true</active>
		<description>Use this record type to capture non-Salesforce scan findings.</description>
		<label>Other</label>
	</recordTypes>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>